# kk6

./: .env.example  .gitignore  CLAUDE.md  FORWARD_EMAILS_README.md  MASTER_REFERENCE.md  PIPEDREAM_FIXED_SMTP_FORWARD.js  README-DISCORD-SETUP.md  README.md  RESEND_SETUP.md  RESEND_SETUP_DIRECT.md  SECURITY_INCIDENT_2025-11-15.md  SECURITY_INCIDENT_LOG.md  TASK_TRACKER.md  TRANSCRIPT_PROCESSING_WORKFLOW.md  WORKING_NOTES.md  forward-resend-emails.js  package-lock.json  package.json
.brand/: BRAND_GUIDE.md
.claude/: HOOKS_SETUP.md
.serena/: project.yml
communications/: ARIZONA_DISPENSARIES_CONTACT_LIST.md  CHRISTMAS_SPONSOR_PITCH_GUIDE.md  FACEBOOK_EVENT_GROUP_STRATEGY.md  FACEBOOK_STRATEGY_REFINED.md  KK6_FORM_SUBMISSIONS_TRACKER.md
kk6-transcript-synthesis/: .env.example  README.md  add_embeddings.py  analyze_kickback_transcripts.py  analyze_topics_simple.py  analyze_with_ollama.py  chat_server.py  debug_postgresql.py  docker-compose.yml  fix_chat.py  init.sql  kickback_planner.py  kickback_transcript_analyses.md  kk6_transcript_extractor.py  main.py  pyproject.toml  query_kickback.py  run.py  test_search_fixed.py  test_workaround.py
kk6-transcript-synthesis/src/kk6_transcript_synthesis/: __init__.py  __main__.py  main.py
kk6-transcript-synthesis/src/kk6_transcript_synthesis/api/: __init__.py  base.py  embeddings.py  factory.py  ollama.py  openrouter.py
kk6-transcript-synthesis/src/kk6_transcript_synthesis/database/: __init__.py  connection.py  models.py  repository.py
kk6-transcript-synthesis/src/kk6_transcript_synthesis/utils/: __init__.py  config.py
(+292 files in other folders)
